Bug 457924 - After executing `reset`, the usual warning when pressing Ctr+S is not seen
Summary: After executing `reset`, the usual warning when pressing Ctr+S is not seen
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-15 16:05 UTC by Ganton
Modified: 2024-03-24 21:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ganton 2022-08-15 16:05:42 UTC
SUMMARY
After executing `reset`, the usual warning when pressing Ctr+S is not seen.

STEPS TO REPRODUCE
1. Press Ctrl+S. See the warning. Press Ctrl+Q
2. Execute `reset`
3. Press Ctrl+S. 

OBSERVED RESULT
The warning is not seen.

EXPECTED RESULT
The warning should have been seen.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 22.04
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Comment 1 Bug Janitor Service 2024-03-24 12:19:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/973
Comment 2 Kurt Hindenburg 2024-03-24 21:21:09 UTC
Git commit 0d3df225c91ea89f67efd149403bee4a54de8a5c by Kurt Hindenburg, on behalf of Luis Javier Merino Morán.
Committed on 24/03/2024 at 20:59.
Pushed by hindenburg into branch 'master'.

Check only IXON when getting flow control state

We check the flow control state to display the "Output has been
suspended" warning message.  Check only IXON (flow control on output) on
the master fd, which corresponds to IXOFF (flow control on input) on
the slave side, since that's the direction we are interested in.

M  +3    -1    src/Pty.cpp

https://invent.kde.org/utilities/konsole/-/commit/0d3df225c91ea89f67efd149403bee4a54de8a5c