Check only IXON when getting flow control state

We check the flow control state to display the "Output has been
suspended" warning message.  Check only IXON (flow control on output) on
the master fd, which corresponds to IXOFF (flow control on input) on
the slave side, since that's the direction we are interested in.

BUG: 457924
(cherry picked from commit 0d3df225c91ea89f67efd149403bee4a54de8a5c)